fix z-index property of sidemenu

--- a/src/components/Sidemenu.scss
+++ b/src/components/Sidemenu.scss
@@ -6,6 +6,7 @@
     background: #FFF;
     position: absolute;
     top: 0;
+    z-index: 999;
 
     #profile {
         background: inherit;
